--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Speech to Text</title>
+    <title>To Your Point</title>
     <script src="/socket.io/socket.io.js"></script>
     <style>
         #notes {
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <h1>Speech to Text</h1>
+    <h1>To Your Point...</h1>
     <button id="startBtn">Start Recording</button>
     <button id="stopBtn" disabled>Stop Recording</button>
     <button id="takeNoteBtn">Take Note</button>
