Use Simplified Highlighting

--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
             white-space: pre-wrap;
             word-wrap: break-word;
         }
-        #finalTranscript {
-            /* Styles for final transcript */
+        #finalTranscript p {
+            cursor: pointer;
+            margin: 0;
+            padding: 5px 0;
+        }
+        #finalTranscript p:hover {
+            background-color: #f0f0f0;
+        }
+        #finalTranscript p.highlight {
+            background-color: yellow;
         }
         #interimTranscript {
             color: gray;
-            /* Other styles for interim transcript */
-        }
-        .highlight {
-            background-color: yellow;
-            cursor: pointer;
         }
     </style>
 </head>
@@ -43,7 +46,20 @@
         const finalTranscript = document.getElementById('finalTranscript');
         const interimTranscript = document.getElementById('interimTranscript');
 
-        let finalTranscriptArray = [];
+        let finalTranscriptArray = [
+            "This is an initial test transcript.",
+            "It has multiple lines for testing purposes.",
+            "You can click on any line to highlight it."
+        ];
+
+        function updateFinalTranscript() {
+            finalTranscript.innerHTML = finalTranscriptArray.map(line => 
+                `<p>${line}</p>`
+            ).join('');
+        }
+
+        // Initial update
+        updateFinalTranscript();
 
         startBtn.addEventListener('click', () => {
             socket.emit('startRecording');
@@ -74,42 +90,16 @@
             }
         });
 
-        function updateFinalTranscript() {
-            finalTranscript.innerHTML = finalTranscriptArray.map(line => 
-                `<p>${line}</p>`
-            ).join('');
-        }
-
         finalTranscript.addEventListener('click', (event) => {
             if (event.target.tagName === 'P') {
                 event.target.classList.toggle('highlight');
             }
         });
 
-        socket.on('reload', () => {
-            console.log('Server code changed. Reloading...');
-            location.reload();
-        });
-
-        // Highlighting functionality
-        finalTranscript.addEventListener('mouseup', () => {
-            const selection = window.getSelection();
-            if (!selection.isCollapsed) {
-                const range = selection.getRangeAt(0);
-                const span = document.createElement('span');
-                span.className = 'highlight';
-                range.surroundContents(span);
-                selection.removeAllRanges();
-            }
-        });
-
-        finalTranscript.addEventListener('click', (event) => {
-            if (event.target.classList.contains('highlight')) {
-                const parent = event.target.parentNode;
-                const textNode = document.createTextNode(event.target.textContent);
-                parent.replaceChild(textNode, event.target);
-                parent.normalize(); // This merges adjacent text nodes
-            }
+        socket.on('resetTranscript', () => {
+            finalTranscriptArray = [];
+            updateFinalTranscript();
+            interimTranscript.textContent = '';
         });
     </script>
 </body>
